<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LinearImageText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="8dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="VectorDrawableCompat"
            tools:srcCompat="@tools:sample/avatars[4]" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNombre"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="12sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tvApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvApellido"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="12sp"
                tools:targetApi="o" />

        </LinearLayout>
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearImageText">

        <LinearLayout
            android:id="@+id/lyListaDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvTelefono"
                android:textSize="12sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbTelefono1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cbTelefono_fijo"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="20">

                <EditText
                    android:id="@+id/etTelefono"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="19"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="12sp"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/btAgregarTelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btnIntroducirNumero"
                    android:text="@string/plus"
                    android:textSize="24sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/lvTelefonasAgregados"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clickable="true"
                android:focusable="true"
                android:scrollbarSize="10dp">


            </ListView>

            <TextView
                android:id="@+id/tvCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCorreo"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="20">

                <EditText
                    android:id="@+id/etCorreo"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="19"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="12sp"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/btnAgregarCorreo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btnIntroducirCorreo"
                    android:text="@string/plus"
                    android:textSize="24sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/lvCorreoAgregados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Direccion"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/calle"
                android:textSize="12sp"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/etNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@string/numero"
                android:textSize="12sp"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/etDatosAdicionales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@string/datosadicionales"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/ciudad"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnIrDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="verEnMapa"
                android:text="Abrir en Mapa" />

            <Button
                android:id="@+id/btModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="btnIntroducirContacto"
                android:text="@string/btnNuevo" />

            <Button
                android:id="@+id/btBorrar"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btBorrar" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>